qtmux: Only write "gap" edit list if there is a non-zero gap

https://bugzilla.gnome.org/show_bug.cgi?id=774840